fix header: can jump to section

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -22,3 +22,7 @@
   margin: 0 1.5vw;
   font-size: calc(8px + 1vw);
 }
+
+.menu a {
+  color: black;
+}
